--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/michal/.local/share/virtualenvs/JSproject-qsQLRFBT/bin/python"
+    "python.pythonPath": "/usr/bin/python3"
 }
