--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+flake8 = "*"
 
 [packages]
-pyqt5 = "==5.9.2"
+pytest = "*"
+apply = "*"
 
 [requires]
 python_version = "3.7"
